fix header wrap bug

--- a/style.css
+++ b/style.css
@@ -368,7 +368,6 @@
     .main-content{
       display: flex;
       flex-direction: column;
-      flex-wrap: wrap;
       padding: 1rem 1rem 1rem 1rem;
       width: 414px;
       position: relative;
@@ -385,11 +384,9 @@
     }
     .cards-header {
       flex-wrap: wrap;
-      width: 48%;
+      width: 45%;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       padding: 3%;
     }
     .icons-header {
